// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedPost [snapshot] should render the "Default" component correctly 1`] = `
<div
  class="bg-white rounded p-5"
>
  <div
    class="flex items-center"
  >
    <div
      class="w-10 h-10 relative after:absolute after:w-12 after:h-12 after:-top-1 after:-left-1 after:rounded-full after:border-2 after:border-neutral-light"
    >
      <img
        alt="The TheBaronless's avatar"
        class="rounded-full w-full h-full"
        src="https://picsum.photos/50"
      />
    </div>
    <div
      class="flex flex-col pl-5"
    >
      <span>
        TheBaronless
      </span>
      <span
        class="text-neutral"
      >
        less than a minute ago
      </span>
    </div>
  </div>
  <p
    class="mt-5"
  >
    Salut à tous, j'ai découvert un groupe complètement ouf, dites-moi ce que vous en pensez !
  </p>
  <!--v-if-->
  <div
    class="flex mt-5 justify-end"
  >
    <span
      class="flex text-neutral"
    >
      <svg
        class=""
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M12.1,18.55L12,18.65L11.89,18.55C7.14,14.24 4,11.39 4,8.5C4,6.5 5.5,5 7.5,5C9.04,5 10.54,6 11.07,7.36H12.93C13.46,6 14.96,5 16.5,5C18.5,5 20,6.5 20,8.5C20,11.39 16.86,14.24 12.1,18.55M16.5,3C14.76,3 13.09,3.81 12,5.08C10.91,3.81 9.24,3 7.5,3C4.42,3 2,5.41 2,8.5C2,12.27 5.4,15.36 10.55,20.03L12,21.35L13.45,20.03C18.6,15.36 22,12.27 22,8.5C22,5.41 19.58,3 16.5,3Z"
          style="fill: currentColor;"
        />
      </svg>
      <span
        class="ml-2"
      >
        10
      </span>
    </span>
    <span
      class="flex text-neutral ml-5"
    >
      <svg
        height="24"
        viewBox="0 0 452.000000 452.000000"
        width="24"
      >
        <path
          d="M2006 4129 c-434 -56 -842 -250 -1137 -541 -255 -251 -412 -549 -471 -892 -17 -103 -19 -148 -15 -296 8 -257 47 -414 162 -645 282 -567 876 -943 1572 -995 99 -8 167 -8 225 0 45 5 88 10 95 10 10 0 13 -63 13 -300 l0 -299 188 121 c389 250 652 465 878 719 320 358 509 710 591 1099 24 111 27 148 27 330 1 226 -10 304 -66 480 -206 643 -820 1117 -1568 1210 -99 12 -395 11 -494 -1z m548 -389 c133 -23 212 -45 333 -94 460 -184 789 -567 864 -1006 17 -104 15 -296 -4 -407 -73 -407 -322 -787 -777 -1185 l-135 -118 -5 138 -5 137 -25 -3 c-14 -1 -82 -13 -151 -27 -70 -13 -167 -29 -215 -35 -513 -58 -1060 144 -1371 510 -204 239 -306 502 -307 795 0 138 14 233 55 360 97 307 334 585 643 756 205 114 417 176 691 203 79 8 300 -5 409 -24z"
          style="fill: currentColor;"
          transform="translate(0.000000,452.000000) scale(0.100000,-0.100000)"
        />
      </svg>
      <span
        class="ml-2"
      >
        15
      </span>
    </span>
  </div>
</div>
`;

exports[`FeedPost [snapshot] should render the "WithTrack" component correctly 1`] = `
<div
  class="bg-white rounded p-5"
>
  <div
    class="flex items-center"
  >
    <div
      class="w-10 h-10 relative after:absolute after:w-12 after:h-12 after:-top-1 after:-left-1 after:rounded-full after:border-2 after:border-neutral-light"
    >
      <img
        alt="The TheBaronless's avatar"
        class="rounded-full w-full h-full"
        src="https://picsum.photos/50"
      />
    </div>
    <div
      class="flex flex-col pl-5"
    >
      <span>
        TheBaronless
      </span>
      <span
        class="text-neutral"
      >
        less than a minute ago
      </span>
    </div>
  </div>
  <p
    class="mt-5"
  >
    Salut à tous, j'ai découvert un groupe complètement ouf, dites-moi ce que vous en pensez !
  </p>
  <div
    class="mt-2"
  >
    
    <div
      class="bg-white-dark rounded p-2 flex"
    >
      <img
        alt="The track cover"
        class="rounded w-16 h-16"
        src="https://picsum.photos/50?1"
      />
      <div
        class="flex flex-col ml-2 leading-tight justify-center"
      >
        <span
          class="font-bold"
        >
          G.O.A.T.
        </span>
        
        <span>
          Polyphia
        </span>
        
      </div>
      <div
        class="flex self-center ml-auto"
      >
        <span
          class="flex text-neutral text-black-light"
        >
          <svg
            class=""
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12.1,18.55L12,18.65L11.89,18.55C7.14,14.24 4,11.39 4,8.5C4,6.5 5.5,5 7.5,5C9.04,5 10.54,6 11.07,7.36H12.93C13.46,6 14.96,5 16.5,5C18.5,5 20,6.5 20,8.5C20,11.39 16.86,14.24 12.1,18.55M16.5,3C14.76,3 13.09,3.81 12,5.08C10.91,3.81 9.24,3 7.5,3C4.42,3 2,5.41 2,8.5C2,12.27 5.4,15.36 10.55,20.03L12,21.35L13.45,20.03C18.6,15.36 22,12.27 22,8.5C22,5.41 19.58,3 16.5,3Z"
              style="fill: currentColor;"
            />
          </svg>
          <!--v-if-->
        </span>
        <span
          class="ml-3"
        >
          2:30
        </span>
      </div>
    </div>
    
  </div>
  <div
    class="flex mt-5 justify-end"
  >
    <span
      class="flex text-neutral"
    >
      <svg
        class=""
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M12.1,18.55L12,18.65L11.89,18.55C7.14,14.24 4,11.39 4,8.5C4,6.5 5.5,5 7.5,5C9.04,5 10.54,6 11.07,7.36H12.93C13.46,6 14.96,5 16.5,5C18.5,5 20,6.5 20,8.5C20,11.39 16.86,14.24 12.1,18.55M16.5,3C14.76,3 13.09,3.81 12,5.08C10.91,3.81 9.24,3 7.5,3C4.42,3 2,5.41 2,8.5C2,12.27 5.4,15.36 10.55,20.03L12,21.35L13.45,20.03C18.6,15.36 22,12.27 22,8.5C22,5.41 19.58,3 16.5,3Z"
          style="fill: currentColor;"
        />
      </svg>
      <span
        class="ml-2"
      >
        10
      </span>
    </span>
    <span
      class="flex text-neutral ml-5"
    >
      <svg
        height="24"
        viewBox="0 0 452.000000 452.000000"
        width="24"
      >
        <path
          d="M2006 4129 c-434 -56 -842 -250 -1137 -541 -255 -251 -412 -549 -471 -892 -17 -103 -19 -148 -15 -296 8 -257 47 -414 162 -645 282 -567 876 -943 1572 -995 99 -8 167 -8 225 0 45 5 88 10 95 10 10 0 13 -63 13 -300 l0 -299 188 121 c389 250 652 465 878 719 320 358 509 710 591 1099 24 111 27 148 27 330 1 226 -10 304 -66 480 -206 643 -820 1117 -1568 1210 -99 12 -395 11 -494 -1z m548 -389 c133 -23 212 -45 333 -94 460 -184 789 -567 864 -1006 17 -104 15 -296 -4 -407 -73 -407 -322 -787 -777 -1185 l-135 -118 -5 138 -5 137 -25 -3 c-14 -1 -82 -13 -151 -27 -70 -13 -167 -29 -215 -35 -513 -58 -1060 144 -1371 510 -204 239 -306 502 -307 795 0 138 14 233 55 360 97 307 334 585 643 756 205 114 417 176 691 203 79 8 300 -5 409 -24z"
          style="fill: currentColor;"
          transform="translate(0.000000,452.000000) scale(0.100000,-0.100000)"
        />
      </svg>
      <span
        class="ml-2"
      >
        15
      </span>
    </span>
  </div>
</div>
`;
